Remove created_by and updated_by columns
