# src/backend/config/lib/swagger/class.swagger.yaml
@@ -195,7 +195,3 @@ components:
                     type: string
                 updated_at:
                     type: string
-                created_by:
-                    type: string
-                updated_by:
-                    type: string
