# src/backend/manage-classes/class.model.js
@@ -14,14 +14,6 @@ const Program = sequelize.dbConnector.define("classes", {
         unique: true,
         allowNull: false,
         type: DataTypes.STRING(50)
-    },
-    created_by: {
-        allowNull: false,
-        type: DataTypes.UUID
-    },
-    updated_by: {
-        allowNull: false,
-        type: DataTypes.UUID
     }
 }, {
     schema: process.env.POSTGRES_DATABASE_SCHEMA,
