# src/backend/manage-users/user.model.js
@@ -40,12 +40,6 @@ const User = sequelize.dbConnector.define("users", {
     },
     refresh_token: {
         type: DataTypes.STRING
-    },
-    created_by: {
-        type: DataTypes.UUID
-    },
-    updated_by: {
-        type: DataTypes.UUID
     }
 }, {
     schema: process.env.POSTGRES_DATABASE_SCHEMA,
@@ -61,7 +55,5 @@ User.prototype.validPassword = function(password) {
 
 Program.hasMany(User, { as: "pupils", foreignKey: "class_id" });
 User.belongsTo(Program, { as: "class", foreignKey: "class_id" });
-
-User.belongsTo(User, { as: "modifier", foreignKey: "updated_by" });
 
 module.exports = User;
